--- a/index.html
+++ b/index.html
@@ -19,35 +19,35 @@
     <form id="empForm" style="border:1px solid red; background-color: lightgray;">
         <div class="form-row">
             <label for="validationCustom01">8-Digit Employee ID</label>
-            <input type="text" class="form-control" required>
+            <input type="text" class="form-control" required id="digit8">
             <div class="invalid-feedback">
                 Please provide a valid ID.
             </div>
         </div>
         <div class="form-row">
             <label for="validationCustom02">Name</label>
-            <input type="text" class="form-control" required>
+            <input type="text" class="form-control" required id="username">
             <div class="invalid-feedback">
                 Please provide a valid name.
             </div>
         </div>
         <div class="form-row">
             <label for="validationCustom03">4-Digit Extension</label>
-            <input type="text" class="form-control" required>
+            <input type="text" class="form-control" required id="digit4">
             <div class="invalid-feedback">
                 Please provide a valid extension.
             </div>
         </div>
         <div class="form-row">
             <label for="validationCustom04">Email</label>
-            <input type="email" class="form-control" required>
+            <input type="email" class="form-control" required id="emailID">
             <div class="invalid-feedback">
                 Please provide a valid email.
             </div>
         </div>
         <div class="form-group">
             <label for="validationCustom05">Department</label>
-            <select class="form-control" id="exampleFormControlSelect1">
+            <select class="form-control" id="deptSelection">
               <option>Administrative</option>
               <option>Engineering</option>
               <option>Executive</option>
@@ -55,7 +55,8 @@
               <option>Sales</option>
             </select>
           </div>
-        <button class="btn btn-primary" type="submit" id="submit">Add Employee</button>
+        <button class="btn btn-primary" type="submit" id="submitForm">Add Employee</button>
+        <output id="output"></output>
     </form>
 </body>
 </html>
