form event handler added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <form id="empForm" style="border:1px solid red; background-color: lightgray;">
         <div class="form-row">
             <label for="validationCustom01">8-Digit Employee ID</label>
-            <input type="text" class="form-control" required id="digit8">
+            <input type="text" class="form-control" required id="digit8" maxlength="8">
             <div class="invalid-feedback">
                 Please provide a valid ID.
             </div>
@@ -33,7 +33,7 @@
         </div>
         <div class="form-row">
             <label for="validationCustom03">4-Digit Extension</label>
-            <input type="text" class="form-control" required id="digit4">
+            <input type="text" class="form-control" required id="digit4" maxlength="4">
             <div class="invalid-feedback">
                 Please provide a valid extension.
             </div>
