--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="form-group">
             <label for="validationCustom05">Department</label>
-            <select class="form-control" id="deptSelection">
+            <select class="form-control" required id="deptSelection">
               <option>Administrative</option>
               <option>Engineering</option>
               <option>Executive</option>
